🧹 Reimplement classfile parsing approach